--- a/测试文件.md
+++ b/测试文件.md
@@ -12,11 +12,11 @@ LZK@DESKTOP-bigwhite MINGW64 /e
 >
 > 主要目的是 测试 ：图片在md文件下，后上传到GitHub上后能显示出来
 
-![test](C:\Users\LZK\Desktop\test.jpg)
+![test](https://raw.githubusercontent.com/lzkhahahh/test_use/master/img/test.jpg)
 
 > 下面也是为了测试图片而写
 >
-> ![清华学生时间规划表](C:\Users\LZK\Desktop\清华学生时间规划表.jpg)
+> ![清华学生时间规划表](https://raw.githubusercontent.com/lzkhahahh/test_use/master/img/test.jpg)
 
 
 
