--- a/测试文件.md
+++ b/测试文件.md
@@ -16,7 +16,7 @@ LZK@DESKTOP-bigwhite MINGW64 /e
 
 > 下面也是为了测试图片而写
 >
-> ![清华学生时间规划表](https://raw.githubusercontent.com/lzkhahahh/test_use/master/img/test.jpg)
+> ![清华学生时间规划表](https://github.com/lzkhahahh/test_use/blob/master/img/%E6%B8%85%E5%8D%8E%E5%AD%A6%E7%94%9F%E6%97%B6%E9%97%B4%E8%A7%84%E5%88%92%E8%A1%A8.jpg)
 
 
 
